--- a/services/CMakeLists.txt
+++ b/services/CMakeLists.txt
@@ -2,4 +2,8 @@ cmake_minimum_required(VERSION 3.20)
 
 project(herocore_services CXX)
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 add_subdirectory(include)
