--- a/services/include/async/tests/CMakeLists.txt
+++ b/services/include/async/tests/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(async_test async_test.cpp)
 
 target_link_libraries(async_test PRIVATE async_task)
+target_link_libraries(async_test PRIVATE logger)
